<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageIcon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:adjustViewBounds="true"
            android:maxWidth="150dp"
            android:maxHeight="150dp"
            android:padding="1dp"
            android:scaleType="centerCrop"
            android:src="@drawable/account_circle_24dp_ffffff_fill0_wght200_grad0_opsz24"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp"/>

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nik"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/games"
            android:text="Игр сыграно: 19"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/change_nik"
        android:text="@string/change_nik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/change_photo"
        android:text="@string/change_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/showReviews"
        android:text="@string/show_reviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/sigh_out"
        android:text="@string/sigh_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>