<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/nameEvent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        app:errorEnabled="true"
        app:errorIconDrawable="@color/design_default_color_error"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEventEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/nameEvent" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/times"
        app:layout_constraintTop_toBottomOf="@+id/nameEvent"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/startTime"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/set_time_start"
            android:layout_weight="0.1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/endTime"
            android:layout_weight="0.1"
            android:textAlignment="center"
            android:text="@string/set_time_end"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/startTimeText"
            android:layout_weight="0.1"
            android:textAlignment="center"
            android:text="@string/set_time_start"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:visibility="gone"
            android:id="@+id/endTimeText"
            android:layout_weight="0.1"
            android:textAlignment="center"
            android:text="@string/set_time_end"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TimePicker
        android:visibility="gone"
        android:id="@+id/timePickerStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/times" />

    <TimePicker
        android:visibility="gone"
        android:id="@+id/timePickerEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/times"  />

    <TextView
        android:id="@+id/countText"
        android:layout_weight="0.1"
        android:text="@string/players"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/times"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <NumberPicker
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countText"
        android:id="@+id/countPlayer"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/createSlot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_slot"
        app:layout_constraintTop_toBottomOf="@id/countPlayer"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/times"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/close"
        android:layout_weight="0.1"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/baseline_done_24" />

</androidx.constraintlayout.widget.ConstraintLayout>